# api/openapi.yaml
@@ -1,201 +1,149 @@
-openapi: 3.0.0
+swagger: '2.0'
 info:
-  title: UniBox
-  description: |
-    Сайт unibox.com
-  version: 1.0.0-oas3
-servers:
-- url: http://127.0.0.1:3000/api
-- url: https://127.0.0.1:3000/api
+  description: "Сайт unibox.com\n"
+  version: "1.0.0"
+  title: "UniBox"
+host: "127.0.0.1"
+basePath: "/api"
+schemes:
+- "http"
+- "https"
+consumes:
+- "application/json"
+produces:
+- "application/json"
 paths:
-  /session:
-    post:
-      summary: Создание сессии
-      description: |
-          Создание сессии и проставление в куках.
-      requestBody:
-        description: Учетные данные пользователя для входа.
-        content:
-          application/json:
-            schema:
-              type: "object"
-              required: [username, password]
-              properties:
-                password:
-                  type: string
-                  description: Пароль
-                  example: string
-                  x-isnullable: false
-                nickname:
-                  type: string
-                  description: |
-                    Имя пользователя (уникальное поле).
-                    Данное поле допускает только латиницу, цифры и знак подчеркивания.
-                  format: identity
-                  example: zzyxel
-      responses:
-        "201":
-          description: |
-            OK
-        "401":
-          description: |
-            Authorization information is missing or invalid.
-    delete:
-      summary: Удаление сессии
-      description: |
-            Удаление сессии.
-      responses:
-        "200":
-          description: |
-            OK
-        "401":
-          description: |
-            Authorization information is missing or invalid.
   /user:
     post:
-      summary: Создание нового пользователя
-      description: |
-        Создание нового пользователя в базе данных.
-      requestBody:
-        description: Данные пользовательского профиля.
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CreateUser'
+      summary: "Создание нового пользователя"
+      description: "Создание нового пользователя в базе данных.\n"
+      operationId: "createUser"
+      parameters:
+      - in: "body"
+        name: "profile"
+        description: "Данные пользовательского профиля."
         required: true
+        schema:
+          $ref: "#/definitions/NewUser"
       responses:
         "201":
-          description: |
-            Пользователь успешно создан.
-            Возвращает данные созданного пользователя.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        "400":
-          description: |
-            Bad Request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+          description: "Пользователь успешно создан.\nВозвращает данные созданного\
+            \ пользователя.\n"
+          schema:
+            $ref: "#/definitions/User"
         "409":
-          description: |
-            Пользователь уже присутсвует в базе данных.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-                
+          description: "Пользователь c таким ником или почтой уже присутсвует в базе данных.\n"
+          schema:
+            $ref: "#/definitions/Error"
+        "400":
+          description: "Bad Request.\n"
+          schema:
+            $ref: "#/definitions/Error"
   /user/{nickname}:
     get:
-      summary: Получение информации о пользователе
-      description: |
-        Получение информации о пользователе.
+      summary: "Получение информации о пользователе"
+      description: "Получение информации о пользователе.\n"
       parameters:
-      - name: nickname
-        in: path
-        description: Идентификатор пользователя.
+      - name: "nickname"
+        in: "path"
+        type: "string"
         required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
+        description: "Идентификатор пользователя."
       responses:
         "200":
-          description: |
-            Возвращает данные пользователя.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
+          description: "Возвращает данные пользователя.\n"
+          schema:
+            $ref: "#/definitions/User"
         "404":
-          description: |
-            Пользователь отсутсвует.
-components:
-  schemas:
-    Error:
-      type: object
-      properties:
-        message:
-          type: string
-    User:
-      required:
-      - email
-      - nickname
-      type: object
-      properties:
-        email:
-          type: string
-          description: Почтовый адрес пользователя (уникальное поле).
-          format: email
-          example: zzyxel@yndex.ru
-          x-isnullable: false
-        nickname:
-          type: string
-          description: |
-            Имя пользователя (уникальное поле).
-            Данное поле допускает только латиницу, цифры и знак подчеркивания.
-          format: identity
-          example: zzyxel
-        firstname:
-          type: string
-          description: Имя пользователя.
-          example: Максим
-          x-isnullable: false
-        lastname:
-          type: string
-          description: Фамилия пользователя.
-          example: Рубцов
-          x-isnullable: false
-      description: |
-        Информация о пользователе.
-      example:
-        email: zzyxel@yndex.ru
-        nickname: zzyxel
-        firstname: Максим
-        lastname: Рубцов
-    CreateUser:
-      required:
-      - email
-      - nickname
-      - password
-      type: object
-      properties:
-        email:
-          type: string
-          description: Почтовый адрес пользователя (уникальное поле).
-          format: email
-          example: zzyxel@yndex.ru
-          x-isnullable: false
-        password:
-          type: string
-          description: Пароль
-          example: string
-          x-isnullable: false
-        nickname:
-          type: string
-          description: |
-            Имя пользователя (уникальное поле).
-            Данное поле допускает только латиницу, цифры и знак подчеркивания.
-          format: identity
-          example: zzyxel
-        firstname:
-          type: string
-          description: Имя пользователя.
-          example: Максим
-          x-isnullable: false
-        lastname:
-          type: string
-          description: Фамилия пользователя.
-          example: Рубцов
-          x-isnullable: false
-      description: |
-        Информация о пользователе.
-      example:
-        email: zzyxel@yndex.ru
-        password: string
-        nickname: zzyxel
-        firstname: Максим
-        lastname: Рубцов
-        
+          description: "Пользователь отсутсвует.\n"
+          
+definitions:
+  Error:
+    type: "object"
+    properties:
+      target:
+        type: "string"
+        example: "email"
+      message:
+        type: "string"
+        example: "invalid"
+      internal:
+        type: "object"
+  User:
+    type: "object"
+    required:
+    - "email"
+    - "nickname"
+    properties:
+      email:
+        type: "string"
+        format: "email"
+        example: "zzyxel@yndex.ru"
+        description: "Почтовый адрес пользователя (уникальное поле)."
+        x-isnullable: false
+      nickname:
+        type: "string"
+        format: "identity"
+        example: "zzyxel"
+        description: "Имя пользователя (уникальное поле).\nДанное поле допускает т\
+          олько латиницу, цифры и знак подчеркивания.\n"
+      firstname:
+        type: "string"
+        example: "Максим"
+        description: "Имя пользователя."
+        x-isnullable: false
+      lastname:
+        type: "string"
+        example: "Рубцов"
+        description: "Фамилия пользователя."
+        x-isnullable: false
+    description: "Информация о пользователе.\n"
+    example:
+      email: "zzyxel@yndex.ru"
+      nickname: "zzyxel"
+      firstname: "Максим"
+      lastname: "Рубцов"
+      
+  NewUser:
+    type: "object"
+    required:
+    - "email"
+    - "password"
+    - "nickname"
+    - "firstname"
+    - "lastname"
+    properties:
+      email:
+        type: "string"
+        format: "email"
+        example: "zzyxel@yndex.ru"
+        description: "Почтовый адрес пользователя (уникальное поле)."
+        x-isnullable: false
+      password:
+        type: "string"
+        example: "string"
+        description: "Пароль"
+        x-isnullable: false
+      nickname:
+        type: "string"
+        format: "identity"
+        example: "zzyxel"
+        description: "Имя пользователя (уникальное поле).\nДанное поле допускает т\
+          олько латиницу, цифры и знак подчеркивания.\n"
+      firstname:
+        type: "string"
+        example: "Максим"
+        description: "Имя пользователя."
+        x-isnullable: false
+      lastname:
+        type: "string"
+        example: "Рубцов"
+        description: "Фамилия пользователя."
+        x-isnullable: false
+    description: "Информация о пользователе.\n"
+    example:
+      email: "zzyxel@yndex.ru"
+      password: "password"
+      nickname: "zzyxel"
+      firstname: "Максим"
+      lastname: "Рубцов"
